--- a/GitStash.ViewModels/GitStash.ViewModels.csproj
+++ b/GitStash.ViewModels/GitStash.ViewModels.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecommendedActionsViewModel.cs" />
     <Compile Include="StashesViewModel.cs" />
+    <Compile Include="StashToBranchViewModel.cs" />
     <Compile Include="StashViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
