--- a/GitStashTest/packages.config
+++ b/GitStashTest/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LibGit2Sharp" version="0.22.0-pre20151023210959" targetFramework="net452" />
-  <package id="LibGit2Sharp.NativeBinaries" version="1.0.106" targetFramework="net452" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
-  <package id="OpenCover" version="4.6.210-rc" targetFramework="net452" />
-  <package id="ReportGenerator" version="2.3.4.0" targetFramework="net452" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="LibGit2Sharp" version="0.22.0" targetFramework="net452" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net452" />
+  <package id="Moq" version="4.5.28" targetFramework="net452" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net452" />
+  <package id="ReportGenerator" version="2.5.1" targetFramework="net452" />
   <package id="SecondLanguage" version="1.0.2.1" targetFramework="net452" />
 </packages>
